--- a/packages/shared-ui/package.json
+++ b/packages/shared-ui/package.json
@@ -1,19 +1,27 @@
 {
   "name": "@rn-integration-examples/shared-ui",
   "version": "0.0.1",
-  "packageManager": "yarn@1.22.22",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
     "typecheck": "tsc --noEmit"
   },
   "peerDependencies": {
-    "react": "18.3.1",
-    "react-native": "0.74.3"
+    "react": "^18.2.0",
+    "react-native": "^0.74.3"
   },
   "devDependencies": {
-    "@types/react": "18.3.3",
-    "@types/react-native": "0.73.0",
-    "typescript": "5.5.3"
+    "@types/react": "^18.2.0",
+    "@types/react-native": "^0.73.0",
+    "typescript": "^5.0.4"
+  },
+  "packageManager": "yarn@1.22.22",
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@usecapsule/react-native-passkey": "^2.1.3",
+    "@usecapsule/react-native-wallet": "^1.3.1",
+    "react-native-crypto": "^2.2.0",
+    "react-native-inappbrowser-reborn": "^3.7.0",
+    "react-native-keychain": "^8.2.0"
   }
 }
