--- a/packages/expo-app/package.json
+++ b/packages/expo-app/package.json
@@ -20,7 +20,9 @@
     "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-navigation/native": "^6.0.2",
     "@usecapsule/react-native-passkey": "^2.1.3",
-    "@usecapsule/react-native-wallet": "^1.3.1",
+    "@usecapsule/react-native-wallet": "1.4.0",
+    "@usecapsule/solana-web3.js-v1-integration": "0.6.0",
+    "@solana/web3.js": "^1.91.8",
     "expo": "~51.0.20",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.8",
