--- a/packages/rn-app/package.json
+++ b/packages/rn-app/package.json
@@ -14,7 +14,9 @@
     "@react-native-clipboard/clipboard": "^1.13.2",
     "@rn-integration-examples/shared-ui": "0.0.1",
     "@usecapsule/react-native-passkey": "^2.1.3",
-    "@usecapsule/react-native-wallet": "^1.3.1",
+    "@usecapsule/react-native-wallet": "1.4.0",
+    "@usecapsule/solana-web3.js-v1-integration": "0.6.0",
+    "@solana/web3.js": "^1.91.8",
     "node-forge": "^1.3.1",
     "node-libs-react-native": "^1.2.1",
     "process": "^0.11.10",
