--- a/packages/with-expo/package.json
+++ b/packages/with-expo/package.json
@@ -25,8 +25,8 @@
     "@types/react-native-get-random-values": "^1.8.2",
     "@types/readable-stream": "^4.0.15",
     "@types/text-encoding": "^0.0.39",
-    "@usecapsule/react-native-passkey": "^2.1.3",
-    "@usecapsule/react-native-wallet": "^1.4.1",
+    "@usecapsule/react-native-passkey": "^2.2.0-dev.4",
+    "@usecapsule/react-native-wallet": "^1.5.0-dev.6",
     "@usecapsule/solana-web3.js-v1-integration": "^0.8.0",
     "expo": "~51.0.22",
     "expo-constants": "~16.0.2",
