--- a/packages/with-rn/package.json
+++ b/packages/with-rn/package.json
@@ -6,15 +6,15 @@
     "android": "react-native run-android",
     "ios": "cd ios && bundler install && bundler exec pod install && cd .. && react-native run-ios",
     "lint": "eslint .",
-    "start": "cd ios && bundler install && bundler exec pod install && cd .. && react-native start"
+    "start": "cd ios && bundler install && bundler exec pod install && cd .. && react-native start --experimental-debugger"
   },
   "dependencies": {
     "@craftzdog/react-native-buffer": "^6.0.5",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-clipboard/clipboard": "^1.14.1",
     "@solana/web3.js": "^1.95.1",
-    "@usecapsule/react-native-passkey": "^2.1.3",
-    "@usecapsule/react-native-wallet": "^1.4.1",
+    "@usecapsule/react-native-passkey": "^2.2.0-dev.4",
+    "@usecapsule/react-native-wallet": "^1.5.0-dev.6",
     "@usecapsule/solana-web3.js-v1-integration": "^0.8.0",
     "node-forge": "^1.3.1",
     "node-libs-react-native": "^1.2.1",
