--- a/packages/with-rn/package.json
+++ b/packages/with-rn/package.json
@@ -14,8 +14,9 @@
     "@react-native-clipboard/clipboard": "^1.14.1",
     "@solana/web3.js": "^1.95.1",
     "@usecapsule/react-native-passkey": "^2.2.0-dev.4",
-    "@usecapsule/react-native-wallet": "^1.5.0-dev.6",
+    "@usecapsule/react-native-wallet": "^1.6.0-dev.1",
     "@usecapsule/solana-web3.js-v1-integration": "^0.8.0",
+    "libphonenumber-js": "^1.11.5",
     "node-forge": "^1.3.1",
     "node-libs-react-native": "^1.2.1",
     "react": "18.2.0",
