--- a/packages/with-expo/package.json
+++ b/packages/with-expo/package.json
@@ -21,10 +21,6 @@
     "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-navigation/native": "^6.0.2",
     "@solana/web3.js": "^1.95.1",
-    "@types/node-forge": "^1.3.11",
-    "@types/react-native-get-random-values": "^1.8.2",
-    "@types/readable-stream": "^4.0.15",
-    "@types/text-encoding": "^0.0.39",
     "@usecapsule/react-native-passkey": "^2.2.0-dev.4",
     "@usecapsule/react-native-wallet": "^1.5.0-dev.6",
     "@usecapsule/solana-web3.js-v1-integration": "^0.8.0",
@@ -38,7 +34,6 @@
     "node-forge": "^1.3.1",
     "node-libs-react-native": "^1.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "^1.11.0",
@@ -50,7 +45,6 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
     "react-native-webview": "^13.10.5",
     "react-native-webview-crypto": "^0.0.25",
     "readable-stream": "^4.5.2",
@@ -58,8 +52,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/node-forge": "^1.3.11",
     "@types/react": "~18.2.45",
+    "@types/react-native-get-random-values": "^1.8.2",
+    "@types/readable-stream": "^4.0.15",
+    "@types/text-encoding": "^0.0.39",
     "babel-plugin-module-resolver": "^5.0.2",
+    "react-dom": "18.2.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-web": "~0.19.10",
     "typescript": "~5.3.3"
   }
 }
