--- a/packages/with-expo/android/app/build.gradle
+++ b/packages/with-expo/android/app/build.gradle
@@ -83,9 +83,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.usecapsule.expoexample'
+    namespace 'com.usecapsule.template.expo'
     defaultConfig {
-        applicationId 'com.usecapsule.expoexample'
+        applicationId 'com.usecapsule.template.expo'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
