--- a/packages/with-expo/android/app/src/debug/AndroidManifest.xml
+++ b/packages/with-expo/android/app/src/debug/AndroidManifest.xml
@@ -3,5 +3,11 @@
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
-    <application android:usesCleartextTraffic="true" tools:targetApi="28" tools:ignore="GoogleAppIndexingWarning" tools:replace="android:usesCleartextTraffic" />
+    <application android:usesCleartextTraffic="true" tools:targetApi="28" tools:ignore="GoogleAppIndexingWarning" tools:replace="android:usesCleartextTraffic">
+            <provider
+        android:name="com.facebook.react.modules.blob.BlobProvider"
+        android:authorities="@string/blob_provider_authority"
+        android:exported="false"
+      />
+    </application>
 </manifest>
