--- a/packages/with-expo/android/app/src/main/AndroidManifest.xml
+++ b/packages/with-expo/android/app/src/main/AndroidManifest.xml
@@ -25,9 +25,17 @@
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="myapp"/>
-        <data android:scheme="com.usecapsule.expoexample"/>
+        <data android:scheme="com.usecapsule.template.expo"/>
+      </intent-filter>
+      <intent-filter android:autoVerify="true" data-generated="true">
+        <action android:name="android.intent.action.VIEW"/>
+        <data android:scheme="https" android:host="app.beta.usecapsule.com" android:pathPrefix="/.well-known/assetlinks.json"/>
+        <data android:scheme="https" android:host="app.usecapsule.com" android:pathPrefix="/.well-known/assetlinks.json"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
+        <category android:name="android.intent.category.DEFAULT"/>
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false"/>
+    <provider android:name="com.facebook.react.modules.blob.BlobProvider" android:authorities="@string/blob_provider_authority" android:exported="false"/>
   </application>
 </manifest>
