--- a/packages/with-rn/android/app/build.gradle
+++ b/packages/with-rn/android/app/build.gradle
@@ -74,9 +74,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.capsulernexample"
+    namespace "com.usecapsule.template.expo"
     defaultConfig {
-        applicationId "com.capsulernexample"
+        applicationId "com.usecapsule.template.expo"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
