--- a/packages/with-rn/android/app/src/debug/AndroidManifest.xml
+++ b/packages/with-rn/android/app/src/debug/AndroidManifest.xml
@@ -5,5 +5,11 @@
     <application
         android:usesCleartextTraffic="true"
         tools:targetApi="28"
-        tools:ignore="GoogleAppIndexingWarning"/>
+        tools:ignore="GoogleAppIndexingWarning">
+                    <provider
+        android:name="com.facebook.react.modules.blob.BlobProvider"
+        android:authorities="@string/blob_provider_authority"
+        android:exported="false"
+      />
+        </application>
 </manifest>
