--- a/packages/with-rn/package.json
+++ b/packages/with-rn/package.json
@@ -27,6 +27,7 @@
     "react-native-modpow": "^1.1.0",
     "react-native-quick-base64": "^2.1.2",
     "react-native-quick-crypto": "^0.7.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-webview": "^13.10.5",
     "react-native-webview-crypto": "^0.0.25",
     "readable-stream": "^4.5.2",
